# libfmod-demos

./: .gitignore  Cargo.toml  README.md  run_demos.sh  setup_demos.sh
examples/: harness_demo.rs  interactive_harness.rs  play_sound.rs  quick_test.rs  studio_banks_test.rs  studio_events_test.rs  studio_parameters_test.rs  verify_fmod.rs
src/: lib.rs
tests/manual/: getting_started.rs
